--- a/hello/platforms/browser/www/index.html
+++ b/hello/platforms/browser/www/index.html
@@ -5,6 +5,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+  <script src="cordova.js"></script>
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.js"></script>
   <script src="js/hello.js"></script>
