--- a/hello/www/index.html
+++ b/hello/www/index.html
@@ -5,6 +5,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="css/hello.css">
   <script src="cordova.js"></script>
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.js"></script>
@@ -14,12 +15,19 @@
 
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-12"></div>
+      <h1>Mon titre</h1>
+      <button id="btn-hello" class="btn btn-primary btn-success btn-lg btn-block" type="submit">Button</button>
+      <div id="res"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-8">
+        <div id="info" class="well hidden">
+          <pre></pre>
+        </div>
+      </div>
     </div>
   </div>
 
-  <h1>Mon titre</h1>
-  <button id="btn-hello" class="btn btn-primary btn-success btn-lg btn-block" type="submit">Button</button>
-  <div id="res"></div>
+
 </body>
 </html>
