--- a/angular/index.html
+++ b/angular/index.html
@@ -8,29 +8,16 @@
   <script src="js/angular/angular.js"></script>
   <script src="js/angular-route/angular-route.js"></script>
   <script src="js/controllers.js"></script>
+  <script src="js/app.js"></script>
 </head>
 <body ng-controller="PhoneListCtrl">
-
   <div class="container-fluid">
     <div class="row">
-      -
       <div class="col-md-10">
         <!--Body content-->
 
-        Search: <input ng-model="query">
-        Sort by:
-        <select ng-model="orderProp">
-          <option value="name">Alphabetical</option>
-          <option value="age">Newest</option>
-        </select>
+        <div ng-view></div>
 
-      <ul class="phones">
-         <li ng-repeat="phone in phones | filter:query | orderBy:orderProp" class="thumbnail">
-           <a href="#/phones/{{phone.id}}" class="thumb"><img ng-src="{{phone.imageUrl}}"></a>
-           <a href="#/phones/{{phone.id}}">{{phone.name}}</a>
-           <p>{{phone.snippet}}</p>
-         </li>
-       </ul>
       </div>
     </div>
   </div>
