--- a/angular/index.html
+++ b/angular/index.html
@@ -8,6 +8,7 @@
   <script src="js/angular/angular.js"></script>
   <script src="js/angular-route/angular-route.js"></script>
   <script src="js/controllers.js"></script>
+  <script src="js/filters.js"></script>
   <script src="js/app.js"></script>
 </head>
 <body ng-controller="PhoneListCtrl">
